--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-include-html": "^1.0.0"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
